# abbs-meta-collector

./: Cargo.toml  DATABASE.md  Dockerfile  README.md  config-docker.toml  config.toml  shell.nix
src/: config.rs  lib.rs  main.rs  package.rs
src/db/: abbs.rs  commit.rs  commits.rs  mod.rs
src/db/entities/: commit.rs  commit_path.rs  commits.rs  fts_packages.rs  histories.rs  history.rs  mod.rs  package_changes.rs  package_dependencies.rs  package_duplicate.rs  package_errors.rs  package_spec.rs  package_testing.rs  package_versions.rs  packages.rs  prelude.rs  tree_branches.rs  trees.rs
src/git/: commit.rs  mod.rs
