[package]
name = "abbs-meta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abbs-meta-apml = { git = "https://github.com/7rah/abbs-meta-rs" }
abbs-meta-tree = { git = "https://github.com/7rah/abbs-meta-rs" }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
serde_json = "1.0"
git2 = { version = "0.15", default-features = false }
rayon = "1.5"
sea-orm = { version = "0.9", features = [
    "sqlx-sqlite",
    "runtime-async-std-rustls",
] }
async-std = { version = "1", features = ["attributes"] }
itertools = "0.10"
indexmap = "1.9"
thread_local = "1"
async-trait = "0.1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
